# generative-ui-server

./: Cargo.toml  README.md
src/: get_balancing_chars.rs  handle_escape.rs  is_valid_non_string_data.rs  lib.rs  main.rs  modify_stack.rs  non_string_data.rs  parse_brace.rs  parse_bracket.rs  parse_char.rs  parse_colon.rs  parse_comma.rs  parse_error_types.rs  parse_quote_char.rs  state_types.rs  string_data.rs  structure_type.rs  test_data.txt  test_data_2.txt
src/lexer/: brace.rs  bracket.rs  colon.rs  comma.rs  dispatcher.rs  escape.rs  is_valid_non_string_data.rs  lexer_error_types.rs  lexer_types.rs  mod.rs  non_string_data.rs  quote.rs  string_data.rs
src/parser/: balancing_test_data.rs  get_balancing_chars.rs  json_balancer.rs  mod.rs  modify_stack.rs  public_error.rs  state_types.rs  structural_types.rs
tests/: perf.rs  regression.rs
